[package]
name = "snapcrab"
version = "0.1.0"
edition = "2024"

[dependencies]
arboard = "3.6.1"
color-eyre = "0.6.5"
eframe = "0.33.3"
egui_extras = { version = "0.33.3", features = ["image"] }
rfd = { version = "0.17.2", features = ["common-controls-v6"] }
thiserror = "2.0.18"
xcap = { version = "0.8.1", features = ["image"] }

[build-dependencies]
embed-resource = "3.0.6"
